fixed horizontal scroll

--- a/src/sass/blocks/_02.colors.scss
+++ b/src/sass/blocks/_02.colors.scss
@@ -4,9 +4,10 @@
         // display: flex;
         // flex-wrap: wrap;
         display: grid;
-        grid-template-columns: repeat(4, 300px);
-        gap: 2.5rem;
-        grid-template-rows: repeat(3, 300px);
+        grid-template-columns: repeat(4, 1fr);
+        gap: 3%;
+        grid-template-rows: repeat(4, minmax(300px, 1fr));
+        grid-auto-flow: row;
     }
 }
 .colors-block {
