--- a/src/sass/blocks/_condition.scss
+++ b/src/sass/blocks/_condition.scss
@@ -88,7 +88,7 @@
 }
 .disabled {
     background: #EBF4F8;
-    border: 1px solid #DBE2EA;
+    // border: 2px solid #DBE2EA;
     color: $primary-color;
     opacity: 0.4;
     box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.08);
@@ -98,7 +98,7 @@
         box-shadow: 0px 2px 4px rgba(44, 39, 56, 0.08);
     }
     &_other-color {
-        border: 1px solid rgba(44, 39, 56, 0.24);
+        border: 2px solid rgba(44, 39, 56, 0.24);
     }
 }
 .top-center {
