--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,7 +1,13 @@
+
 @media only screen and (max-width: 1200px) {
     .container {
         width: 960px;
         padding: 0;
+    }
+    .tooltip {
+        &__wrapper {
+            width: 100%;
+        }
     }
     .typeface {
         &__logo {
